--- a/index.html
+++ b/index.html
@@ -504,15 +504,13 @@ function resetCountyTooltip() {
 }
 function rebuildCountyMask() {
   try {
-    // remove any existing
-    if (typeof worldMask !== 'undefined' && worldMask) { map.removeLayer(worldMask); worldMask = null; }
+    if (worldMask) { map.removeLayer(worldMask); worldMask = null; }
 
-    // make sure the pane exists and sits between tiles (200) and overlays (400)
     if (!map.getPane('maskPane')) map.createPane('maskPane');
-    map.getPane('maskPane').style.zIndex = 300;
+    const mp = map.getPane('maskPane');
+    if (mp && !mp.style.zIndex) mp.style.zIndex = 210; // keep under townshipPane=400
 
-    // choose a county feature: prefer saved ref; fallback to county layer's GeoJSON
-    let f = (typeof countyFeatureRef !== 'undefined' && countyFeatureRef) ? countyFeatureRef : null;
+    let f = countyFeatureRef;
     if (!f && countyLayerRef && typeof countyLayerRef.toGeoJSON === 'function') {
       const gj = countyLayerRef.toGeoJSON();
       f = (gj && Array.isArray(gj.features)) ? gj.features[0] : (gj && gj.type === 'Feature' ? gj : null);
@@ -523,10 +521,11 @@ function rebuildCountyMask() {
       style: { fillColor:'#cccccc', fillOpacity:0.7, stroke:false, pane:'maskPane' }
     }).addTo(map);
 
-    // mask must not eat clicks
+    // let clicks pass through the mask
     try { worldMask.eachLayer(l => { const el = l.getElement?.(); if (el) el.style.pointerEvents = 'none'; }); } catch {}
   } catch {}
 }
+
 
 
 async function checkLogin() {
