--- a/index.html
+++ b/index.html
@@ -385,6 +385,8 @@
   let countyFeatureRef;      // county Feature for mask rebuild
   let townshipLayerRef;      // MT L.GeoJSON
   let roadsBufferGroup = L.layerGroup(); // holds 20px invisible buffers
+  let countyMaskFeature = null; // a prebuilt mask (outer rect with Lanc as hole)
+
 
 
 
