--- a/index.html
+++ b/index.html
@@ -1209,8 +1209,21 @@ try {
 } catch {}
 
 
-  // 4) Rebuild the mask to shade OUTSIDE Lancaster only (no interior cover)
+  // Reapply outside-only mask using the cached feature
+if (worldMask) { map.removeLayer(worldMask); worldMask = null; }
+if (!map.getPane('maskPane')) map.createPane('maskPane');
+const mp = map.getPane('maskPane'); if (mp && !mp.style.zIndex) mp.style.zIndex = 210;
+
+if (countyMaskFeature) {
+  worldMask = L.geoJSON(countyMaskFeature, {
+    style: { fillColor:'#cccccc', fillOpacity:0.7, stroke:false, pane:'maskPane' }
+  }).addTo(map);
+  try { worldMask.eachLayer(l => { const el = l.getElement?.(); if (el) el.style.pointerEvents = 'none'; }); } catch {}
+} else {
+  // fallback if user navigated before cache existed
   rebuildCountyMask();
+}
+
 
   // 5) Fit to county bounds
   try {
