--- a/index.html
+++ b/index.html
@@ -527,6 +527,25 @@ function rebuildCountyMask() {
     try { worldMask.eachLayer(l => { const el = l.getElement?.(); if (el) el.style.pointerEvents = 'none'; }); } catch {}
   } catch {}
 }
+function normalizeSolvedRoadStyles() {
+  try {
+    if (!roadsLayerGroup) return;
+    roadsLayerGroup.eachLayer(l => {
+      const st = segmentStateMap.get(String(l.feature.id));
+      if (st?.correct) {
+        // the green overlay is the visual; hide the base stroke and block hover
+        l.setStyle({ color: 'transparent' });
+        l.options.interactive = false;
+        const p = l._path; if (p) p.style.pointerEvents = 'none';
+      } else if (st?.used_hint) {
+        // if you also make orange roads unclickable, keep pointerEvents off too
+        l.options.interactive = false;
+        const p = l._path; if (p) p.style.pointerEvents = 'none';
+      }
+      // unsolved roads: leave as-is (black/red/yellow)
+    });
+  } catch {}
+}
 
 
 
