--- a/index.html
+++ b/index.html
@@ -1123,7 +1123,9 @@ worldMask.eachLayer(layer => {
 
   // ✅ Show roads after MT is clicked
   map.addLayer(roadsLayerGroup);
-                        map.addLayer(roadsBufferGroup);
+  map.addLayer(roadsBufferGroup);
+     normalizeSolvedRoadStyles();
+
 });
 
                   }
