--- a/index.html
+++ b/index.html
@@ -533,27 +533,36 @@ function normalizeSolvedRoadStyles() {
 
     roadsLayerGroup.eachLayer(l => {
       const st = segmentStateMap.get(String(l.feature.id));
-      if (st?.correct || st?.used_hint) {
-        // Hide the base stroke completely
-        l.setStyle({ color: 'transparent', opacity: 0 });
+      if (!st?.correct && !st?.used_hint) return;
 
-        // Make absolutely non-interactive
-        l.options.interactive = false;
-        const p = l._path;
-        if (p) p.style.pointerEvents = 'none';
+      // Hide the base stroke completely
+      l.setStyle({ color: 'transparent', opacity: 0 });
 
-        // Strip any transient classes/attributes that could reapply a stroke
-        const el = l.getElement?.();
-        if (el) {
-          el.classList.remove('hover-green', 'active-highlight', 'hover-gold');
-          el.removeAttribute('stroke');
-          el.removeAttribute('stroke-opacity');
-          el.removeAttribute('stroke-width');
-        }
+      // Make non-interactive
+      l.options.interactive = false;
+      const p = l._path;
+      if (p) p.style.pointerEvents = 'none';
 
-        // Remove event listeners on solved segments so nothing recolors them later
-        if (typeof l.off === 'function') l.off();
+      // Remove any classes/attributes that can force a stroke (blue)
+      const el = l.getElement?.();
+      if (el) {
+        // 🔥 THIS kills the blue: remove 'correct-final'
+        el.classList.remove('correct-final', 'hover-green', 'active-highlight', 'hover-gold');
+
+        // Clean up any SVG stroke attributes/styles that might have been set
+        el.removeAttribute('stroke');
+        el.removeAttribute('stroke-opacity');
+        el.removeAttribute('stroke-width');
+        el.style.stroke = 'none';
+        el.style.strokeOpacity = '';
+        el.style.strokeWidth = '';
       }
+
+      // Optional: ensure our internal color marker treats it as solved
+      l._originalColor = 'greenish';
+
+      // Extra safety: solved segments don’t need mouse events at all
+      if (typeof l.off === 'function') l.off();
     });
   } catch {}
 }
